--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tizen Wearable Web IDE - Tizen Wearable - Tizen Wearable basic Application</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <script src="js/config.js"></script>
     <script src="js/socket.io.js"></script>
     <script src="js/main.js"></script>
 </head>
